[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/bookshelf.gd" id="1_script"]

[node name="Bookshelf" type="Control"]
custom_minimum_size = Vector2(171, 500)
script = ExtResource("1_script")

[node name="Shelf1" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 70
offset_top = 195
offset_right = 241
offset_bottom = 295
theme_override_constants/separation = 0

[node name="Books1" type="HBoxContainer" parent="Shelf1"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="Book1" type="ColorRect" parent="Shelf1/Books1"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.6, 0.2, 0.2, 1)

[node name="Book2" type="ColorRect" parent="Shelf1/Books1"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.2, 0.4, 0.6, 1)

[node name="Book3" type="ColorRect" parent="Shelf1/Books1"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.2, 0.5, 0.3, 1)

[node name="ShelfLine1" type="ColorRect" parent="Shelf1"]
custom_minimum_size = Vector2(171, 10)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.45, 0.28, 0.15, 1)

[node name="Shelf2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 70
offset_top = 360
offset_right = 241
offset_bottom = 460
theme_override_constants/separation = 0

[node name="Books2" type="HBoxContainer" parent="Shelf2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="Book1" type="ColorRect" parent="Shelf2/Books2"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.5, 0.3, 0.5, 1)

[node name="Book2" type="ColorRect" parent="Shelf2/Books2"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.6, 0.5, 0.2, 1)

[node name="Book3" type="ColorRect" parent="Shelf2/Books2"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.4, 0.25, 0.15, 1)

[node name="ShelfLine2" type="ColorRect" parent="Shelf2"]
custom_minimum_size = Vector2(171, 10)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.45, 0.28, 0.15, 1)

[node name="Shelf3" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 70
offset_top = 495
offset_right = 241
offset_bottom = 595
theme_override_constants/separation = 0

[node name="Books3" type="HBoxContainer" parent="Shelf3"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="Book1" type="ColorRect" parent="Shelf3/Books3"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.3, 0.3, 0.5, 1)

[node name="Book2" type="ColorRect" parent="Shelf3/Books3"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.5, 0.2, 0.3, 1)

[node name="Book3" type="ColorRect" parent="Shelf3/Books3"]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
color = Color(0.2, 0.4, 0.4, 1)

[node name="ShelfLine3" type="ColorRect" parent="Shelf3"]
custom_minimum_size = Vector2(171, 10)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.45, 0.28, 0.15, 1)
